Feat: Add dns route and Get tunnel info
